Start refactoring as a distributed microservice
